basic setup done;

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>vukkumsp</title>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    www.vukkumsp.com coming soon !!
+    <header>
+      <h1>vukkumsp</h1>
+    </header>
+    <section>
+      <fieldset>
+        <legend>
+          Portfolio coming soon !!
+        </legend>
+      </fieldset>
+    </section>
   </body>
 </html>
