--- a/index.html
+++ b/index.html
@@ -3,25 +3,44 @@
   <head>
     <meta charset="utf-8" />
     <title>vukkumsp</title>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+
+    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- The below css might not be required as we are use web fonts directly -->
-    <!-- <link rel="stylesheet" href="googlefonts.css"> -->
+    <!-- <link rel="stylesheet" href="css/googlefonts.css"> -->
   </head>
   <body>
-    <header>
-      <h1>vukkumsp</h1>
-    </header>
-    <section>
-      <fieldset>
-        <legend>
-          Portfolio coming soon !!
-        </legend>
-      </fieldset>
+    <section class="container">
+      <section class="header-section">
+        <header>
+          <h3>Vukkum Sai Prakash</h3>
+          <p>Full Stack Developer</p>
+        </header>
+      </section>
+      <section class="left-section profile">
+        <fieldset>
+          <legend>
+            Profile
+          </legend>
+        </fieldset>
+      </section>
+      <section class="right-section">
+        <fieldset>
+          <legend>
+            Body
+          </legend>
+        </fieldset>
+      </section>
     </section>
   </body>
 </html>
