done some more changes;

--- a/index.html
+++ b/index.html
@@ -79,15 +79,19 @@
 
         <!-- ------------------------------------------------------------------------------ -->
 
-        <fieldset>
+        <fieldset class="contact-me">
           <legend>
             Contact Me
           </legend>
+          <!-- <iframe _ngcontent-luu-c11="" src="https://docs.google.com/forms/d/e/1FAIpQLSeZ_QcRMS1ate1zIBXFkp3-asz5UGjeFAENauWaymYXTgTgZA/viewform?embedded=true" width="400" height="450" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+          <!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdyeAqC8XrfQ0i9py5fTi6D-6M_WOP6gGLvYowPe2K9ciCU-A/viewform?embedded=true" width="640" height="682" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
           <form class="contact-me-form">
             <label for="name">Name</label>
             <input type="text" id="name" placeholder="Name">
             <label for="email">Email</label>
             <input type="email" id="email" placeholder="Email">
+            <label for="message">Message</label>
+            <textarea id="message" placeholder="Enter your message here"></textarea>
             <button class="contact-me-submit-btn" type="submit">Submit</button>
           </form>
         </fieldset>
@@ -96,19 +100,34 @@
 <!-- ------------------------------------------------------------------------------------ -->
 
       <section class="right-section">
-        <fieldset>
+        <fieldset class="work-experience">
           <legend>
             Work Experience
           </legend>
+          <div class="work">
+            Some experience
+          </div>
         </fieldset>
 
         <!-- ------------------------------------------------------------------------------ -->
 
-        <fieldset>
+        <fieldset class="personal-projects">
           <legend>Personal Projects</legend>
           <div class="personal-project">
             <div class="personal-project-name">
               Polling Booth
+            </div>
+            <div class="personal-project-details">
+              <div>Description:</div>
+              <div>Github:</div>
+            </div>
+          </div>
+
+          <hr>
+
+          <div class="personal-project">
+            <div class="personal-project-name">
+              Local Entertainment System
             </div>
             <div class="personal-project-details">
               <div>Description:</div>
